Update Info.plist for macos dist
1. Introduce $platform$ macro
2. Separate binaries for x64 and aarch64
3. Drop java parameters (moved to product-info.json)